# opengl-sonnensystem

./: CMakeLists.txt  README.md  build.sh
include/: cube.hpp  defines.hpp  game.hpp  planet.hpp  quad.hpp  renderable.hpp  renderer.hpp  shader.hpp  sphere.hpp
res/: fragmentshader.txt  outlinefragment.txt  outlinevertex.txt  sunfragmentshader.txt  sunvertexshader.txt
src/: cube.cpp  game.cpp  main.cpp  planet.cpp  quad.cpp  renderer.cpp  shader.cpp  sphere.cpp
